@@ -4,21 +4,6 @@
 #clean cmdline of foreigns in case of something wicked is going on in there
 #(supports my kernel edits, so that the kernel boots with that values)
 
-##Get CPU MINCLOCK from aroma tmp
-val=$(cat /tmp/aroma-data/minkhz.prop | cut -d"=" -f2)
-case $val in
-  1)
-    minkhz="189000"
-    ;;
-  2)
-    minkhz="384000"
-    ;;
-  3)
-    minkhz="432000"
-    ;;
-esac
-##end Get cpu minclock from aroma tmp
-
 ##Get CPU MAXCLOCK from aroma tmp
 val=$(cat /tmp/aroma-data/maxkhz.prop | cut -d"=" -f2)
 case $val in
@@ -26,19 +11,40 @@ case $val in
     maxkhz="1512000"
     ;;
   2)
-    maxkhz="1539000"
+    maxkhz="1566000"
     ;;
   3)
     maxkhz="1674000"
     ;;
  4)
-    maxkhz="1755000"
+    maxkhz="1728000"
     ;;
  5)
     maxkhz="1782000"
     ;;
 esac
 ##end Get cpu maxclock from aroma tmp
+
+##Get CPU MINCLOCK from aroma tmp
+val=$(cat /tmp/aroma-data/minkhz.prop | cut -d"=" -f2)
+case $val in
+  1)
+    minkhz="162000"
+    ;;
+  2)
+    minkhz="175500"
+    ;;
+  3)
+    minkhz="189000"
+    ;;
+  4)
+    minkhz="384000"
+    ;;
+  5)
+    minkhz="432000"
+    ;;
+esac
+##end Get cpu minclock from aroma tmp
 
 ##Get 3dgpuoc from aroma tmp
 val=$(cat /tmp/aroma-data/3dgpu.prop | cut -d"=" -f2)
@@ -76,7 +82,6 @@ case $val in
 esac
 ##end Get 2dgpuoc from aroma tmp
 
-
 #clean cmdline from foreigns. failsafe
 #needed since some cmdlines are full of rubbish :)
 sed -i 's/no_console_suspend=1[^$]*$/no_console_suspend=1/g' /tmp/boot.img-cmdline
@@ -87,7 +92,7 @@ searchString="maxkhz="
 maxkhz="maxkhz="$maxkhz
 case $cmdline in
   "$searchString"* | *" $searchString"*)
-   	echo $(cat /tmp/boot.img-cmdline | sed -re 's/maxkhz=[^ ]\+//')>/tmp/boot.img-cmdline
+   	echo $(cat /tmp/boot.img-cmdline | sed -e 's/maxkhz=[^ ]\+//')>/tmp/boot.img-cmdline
 	echo $(cat /tmp/boot.img-cmdline)\ $maxkhz>/tmp/boot.img-cmdline
 	;;  
   *)
@@ -102,7 +107,7 @@ searchString="minkhz="
 minkhz="minkhz="$minkhz
 case $cmdline in
   "$searchString"* | *" $searchString"*)
-   	echo $(cat /tmp/boot.img-cmdline | sed -re 's/minkhz=[^ ]\+//')>/tmp/boot.img-cmdline
+   	echo $(cat /tmp/boot.img-cmdline | sed -e 's/minkhz=[^ ]\+//')>/tmp/boot.img-cmdline
 	echo $(cat /tmp/boot.img-cmdline)\ $minkhz>/tmp/boot.img-cmdline
 	;;  
   *)
@@ -110,21 +115,6 @@ case $cmdline in
 	;;
 esac
 #end minkhz
-
-#Add gov to the kernels cmdline.
-cmdline=$(cat /tmp/boot.img-cmdline)
-searchString="gov="
-gov="gov="$gov
-case $cmdline in
-  "$searchString"* | *" $searchString"*)
-   	echo $(cat /tmp/boot.img-cmdline | sed -e 's/gov=[^ ]\+//')>/tmp/boot.img-cmdline
-	echo $(cat /tmp/boot.img-cmdline)\ $gov>/tmp/boot.img-cmdline
-	;;  
-  *)
-	echo $(cat /tmp/boot.img-cmdline)\ $gov>/tmp/boot.img-cmdline
-	;;
-esac
-#end gov
 
 #Add 3dgpu to the kernels cmdline.
 cmdline=$(cat /tmp/boot.img-cmdline)
@@ -154,9 +144,8 @@ case $cmdline in
 	echo $(cat /tmp/boot.img-cmdline)\ $gpu2d>/tmp/boot.img-cmdline
 	;;
 esac
+#end 2dgpu
 
 mv /system/bin/thermald /system/bin/thermald_old
 mv /system/bin/mpdecision /system/bin/mpdecision_old
-
-#end 2dgpu
 
